objects/Asset_Summary__c.object
<CustomObject>
    <description>Custom Asset  Summary</description>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Summary of Asset</relationshipLabel>
        <relationshipName>Summary_of_Asset</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAN_Total_15_days__c</fullName>
        <label>LAN Total - 15 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contact__c</fullName>
        <label>Last Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_Total_15_days__c</fullName>
        <label>Reduction Total - 15 days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN_Total_15_days__c</fullName>
        <label>WAN Total - 15 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Summary</label>
    <nameField>
        <label>Asset Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summary of Asset</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>